# tracer

./: .gitignore  README.md  app.vue  nuxt.config.ts  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts  wdio.tauri.conf.mjs
.agentinstruct/: fix1.md  seed.md
.github/workflows/: build-windows-installer.yml  linux-build.yml  macos-build.yml  windows-build.yml
.omo/: boulder.json
.omo/evidence/: f1-plan-compliance.md  f2-tests.md  f3-smoke-desktop.md  f3-smoke-web.md  f4-scope-fidelity.md  task-1-build.md  task-1-scaffold.md  task-10-export.md  task-11-gating.md  task-12-missing-key.md  task-13-github-oauth-fail.md  task-13-github-oauth.md  task-14-synthesize.md  task-15-generate-limit.md  task-15-generate.md  task-16-chat-grounded.md  task-17-star-persist.md  task-18-learn-deterministic.md  task-19-match.md  task-2-playwright-web.md  task-2-vitest.md  task-2-wdio.md  task-20-guide-view.md  task-21-search.md  task-22-doc.md  task-23-offline.md  task-24-secret-scan.md  task-25-e2e-deterministic.md  task-3-json-constraint.md  task-3-roundtrip.md  task-4-tsv-tests.md  task-4-ui-roundtrip.md  task-5-lock-happy.md  task-5-lock-wrong.md  task-5-reset.md  (+4 more)
components/: AiErrorModal.vue  AppShell.vue  AppTopbar.vue  BackButton.vue  MarkdownRenderer.vue
docs/: architecture.md
pages/: first-run.vue  index.vue  settings.vue  unlock.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_core.sql
src-tauri/src/: lib.rs  main.rs  security.rs
tests/: run.mjs
(+91 files in other folders)
