[package]
name = "tracer"
version = "0.1.0"
description = "Tracer"
authors = ["you"]
edition = "2021"

[lib]
name = "tracer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
doctest = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-stronghold = { version = "2", features = ["kdf"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3.6", features = ["apple-native", "windows-native", "linux-native"] }
argon2 = "0.5"
rand_core = "0.6"
tokio = { version = "1", features = ["net", "time", "sync"] }
urlencoding = "2"

[dev-dependencies]
tempfile = "3"

[profile.dev.package.scrypt]
opt-level = 3
